bluegreen-demo.openshift-only.backup/app-production-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-production
  namespace: bluegreen-demo
spec:
  selector:
    app: bluegreen-app
    version: v1
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
