bluegreen-demo.openshift-only.backup/app-production-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: app
  namespace: bluegreen-demo
spec:
  to:
    kind: Service
    name: app-production
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
