bluegreen-demo.openshift-only.backup/app-v2-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: app-v2
  namespace: bluegreen-demo
spec:
  to:
    kind: Service
    name: app-v2
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
